# chebyshev

./: .gitignore  CMakeLists.txt  README.md
include/: chebyshev.h
src/: main.cpp
